--- a/LoginFB/ios/LoginFB/Info.plist
+++ b/LoginFB/ios/LoginFB/Info.plist
@@ -51,5 +51,25 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>CFBundleURLTypes</key>
+<array>
+  <dict>
+    <key>CFBundleURLSchemes</key>
+    <array>
+      <string>fb1014738902409985</string>
+    </array>
+  </dict>
+</array>
+<key>FacebookAppID</key>
+<string>1014738902409985</string>
+<key>FacebookDisplayName</key>
+<string>LoginDK</string>
+<key>LSApplicationQueriesSchemes</key>
+<array>
+  <string>fbapi</string>
+  <string>fb-messenger-share-api</string>
+  <string>fbauth2</string>
+  <string>fbshareextension</string>
+</array>
 </dict>
 </plist>
